Revamp Supabase portal teacher and student flows

--- a/portal/supabase-portal.html
+++ b/portal/supabase-portal.html
@@ -24,8 +24,9 @@
 
   <main class="wrap portal-main">
     <section class="panel card portal-hero">
-      <h1>Gestor de tasques (Supabase)</h1>
-      <p class="subtitle">Autentica't amb el teu compte per gestionar assignacions entre mestres i alumnes amb la mateixa experiència FocusQuiz.</p>
+      <div class="portal-hero__badge">Nova experiència</div>
+      <h1>Gestor Supabase Focus</h1>
+      <p class="subtitle">Connecta mestres i alumnat amb un espai més visual, ràpid i amb notificacions automàtiques de resultats.</p>
       <div id="configWarning" class="portal-alert hidden">Configura les claus Supabase a <code>SUPABASE_URL</code> i <code>SUPABASE_ANON_KEY</code> mitjançant variables d'entorn.</div>
     </section>
 
@@ -180,8 +181,15 @@
               <span class="portal-field-label">Comentaris addicionals (opcional)</span>
               <textarea class="input" name="note" rows="3" placeholder="Instruccions extra per a l'alumnat..."></textarea>
             </label>
-            <section>
-              <p class="portal-section-title" style="margin-bottom:0.5rem">Selecciona alumnes per assignar la tasca</p>
+            <section class="portal-student-selector">
+              <div class="portal-section-header" style="align-items:flex-start; gap:0.75rem;">
+                <div>
+                  <p class="portal-section-title" style="margin-bottom:0.35rem">Selecciona alumnes per assignar la tasca</p>
+                  <p class="portal-muted" style="margin:0">Filtra per grup per activar ràpidament tota una classe.</p>
+                </div>
+                <span id="studentSelectionCount" class="portal-chip portal-chip--muted">Cap alumne seleccionat</span>
+              </div>
+              <div id="studentGroupFilter" class="portal-group-chips" role="group" aria-label="Filtra per grup"></div>
               <div id="studentChecklist" class="portal-assignees"></div>
             </section>
             <div class="portal-actions">
@@ -191,6 +199,18 @@
           </form>
           <div id="assignmentFeedback" class="portal-success hidden" style="margin-top:1rem"></div>
           <div id="assignmentError" class="portal-error hidden" style="margin-top:1rem"></div>
+        </section>
+
+        <section id="teacherGrades" class="panel card hidden">
+          <div class="portal-section-header" style="align-items:flex-start; gap:0.75rem;">
+            <div>
+              <p class="portal-section-title" style="margin-bottom:0.35rem">Resultats rebuts</p>
+              <h2 style="margin:0">Notes dels alumnes</h2>
+              <p class="portal-muted" style="margin-top:0.35rem;">Consulta les darreres entregues i la nota assignada automàticament.</p>
+            </div>
+            <button id="refreshGrades" type="button" class="btn-secondary">Actualitza notes</button>
+          </div>
+          <div id="teacherGradesList" class="portal-feed"></div>
         </section>
 
         <section id="teacherAssignments" class="panel card hidden">
@@ -206,7 +226,7 @@
     <section id="studentPanel" class="portal-tabpanel hidden" data-tab-panel="student" role="tabpanel" aria-labelledby="tab-student">
       <section id="studentView" class="panel card hidden">
         <h2>Panell d'alumne/a</h2>
-        <p class="portal-muted">Consulta les tasques assignades i marca el progrés.</p>
+        <p class="portal-muted">Les proves arriben amb una presentació simplificada i un botó neon per començar. Quan finalitzis, la nota s'enviarà sola a la docent.</p>
         <div id="studentAssignmentList" class="portal-list list" aria-live="polite"></div>
       </section>
     </section>
