--- a/portal/supabase-portal.html
+++ b/portal/supabase-portal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Focus Academy · Gestor de tasques Supabase</title>
+  <title>Focus Academy · Gestor de tasques</title>
   <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="./portal.css" />
 </head>
@@ -25,9 +25,9 @@
   <main class="wrap portal-main">
     <section class="panel card portal-hero">
       <div class="portal-hero__badge">Nova experiència</div>
-      <h1>Gestor Supabase Focus</h1>
+      <h1>Gestor base Focus</h1>
       <p class="subtitle">Connecta mestres i alumnat amb un espai més visual, ràpid i amb notificacions automàtiques de resultats.</p>
-      <div id="configWarning" class="portal-alert hidden">Configura les claus Supabase a <code>SUPABASE_URL</code> i <code>SUPABASE_ANON_KEY</code> mitjançant variables d'entorn.</div>
+      <div id="configWarning" class="portal-alert hidden">Configura les claus base a <code>BASE_URL</code> i <code>BASE_ANON_KEY</code> mitjançant variables d'entorn.</div>
     </section>
 
     <section id="authPanel" class="panel card">
