--- a/portal/supabase-portal.html
+++ b/portal/supabase-portal.html
@@ -25,7 +25,7 @@
   <main class="wrap portal-main">
     <section class="panel card portal-hero">
       <div class="portal-hero__badge">Nova experiència</div>
-      <h1>Gestor base Focus</h1>
+      <h1>Gestor de tasques</h1>
       <p class="subtitle">Connecta mestres i alumnat amb un espai més visual, ràpid i amb notificacions automàtiques de resultats.</p>
       <div id="configWarning" class="portal-alert hidden">Configura les claus base a <code>BASE_URL</code> i <code>BASE_ANON_KEY</code> mitjançant variables d'entorn.</div>
     </section>
