Use native details dropdown for Teoria links

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <button class="pill nav-btn" data-view="results" type="button" onclick="showView('results')">📊 Resultats</button>
         <button class="pill nav-btn" data-view="about" type="button" onclick="showView('about')">ℹ️ Qui som?</button>
         <details class="nav-dropdown">
-          <summary class="pill nav-btn" role="button" aria-haspopup="menu" aria-expanded="false">📘 Teoria</summary>
-          <div class="dropdown-menu" role="menu">
-            <a class="dropdown-item" href="teoria.html" role="menuitem">Matemàtiques · π</a>
-            <a class="dropdown-item" href="teoriacatala.html" role="menuitem">Català · à</a>
+          <summary class="pill nav-btn nav-dropdown-toggle">📘 Teoria</summary>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="teoria.html">Teoria de mates</a>
+            <a class="dropdown-item" href="teoriacatala.html">Teoria de català</a>
           </div>
         </details>
         <a class="pill" href="https://focuscat.onrender.com/" target="_blank" rel="noopener" title="Focus Exams">FE</a>
