Update dropdown items with new labels and emojis

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             📘 Teoria
           </button>
           <div class="dropdown-menu" id="theoryDropdownMenu" role="menu" aria-labelledby="theoryDropdownToggle">
-            <a class="dropdown-item" href="teoria.html" role="menuitem">Teoria de mates</a>
-            <a class="dropdown-item" href="teoriacatala.html" role="menuitem">Teoria de català</a>
+            <a class="dropdown-item" href="teoria.html" role="menuitem">🔢- Teoria de matemàtiques</a>
+            <a class="dropdown-item" href="teoriacatala.html" role="menuitem">📚-Teoria de català</a>
           </div>
         </div>
         <a class="pill" href="https://focuscat.onrender.com/" target="_blank" rel="noopener" title="Focus Exams">FE</a>
